Move web server inside DBMS system
Before this PR web server was a top-level component in the hierarchy of neo4j containers.
And on a bootstrap web server was started first and it was the responsibility of webserver to
start DBMS and embed that as some inner component. A high-level diagram of that is below:
                               +-------------------------------+
                               | Web Server ♔                  |
                               |               +-------------+ |
                               |               |    DBMS     | |
                               |               |             | |
                               |               +-------------+ |
                               +-------------------------------+
That organization of components was historical, incorrect and problematic.
Just a couple for illustration purposes:
          * web server can be turned off - what to do in that case?;
          * web server depends on internal DBMS components - callback hell for the rescue.

This PR changes that so now web server is only one of the internal DBMS components that
integrated into a common system lifecycle and editions structure.
High level diagram of new model bellow:
                               +-------------------------------+
                               |                               |
                               |  DBMS ♔                       |
                               |              +--------------+ |
                               |              |Web Container | |
                               |              |              | |
                               |              +--------------+ |
                               +-------------------------------+

Also as part of this PR server was renamed to the web container, web server
depending on the context and usage areas, database factories that
were server custom are removed. Module dependencies were reorganized for a new model.